@@ -243,7 +243,7 @@ Chronological list of authors
   - Kurt McKee
   - Fabian Zills
   - Laksh Krishna Sharma
-
+  - Matthew Davies
 
 
 External code
